--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ figure .logo-text{
     height: 100%;
 }
 
-figure{
+figure {
     width: 150px;
     height: 25px;
 }
@@ -82,10 +82,17 @@ li{
 }
 
 .opinion{
-    height: 392px;
     background: #C271FF;
 }
 
+
+.opinion-text{
+    height: 68px;
+    width: 730px;  
+    font-size: 22px;
+    font-weight: 400;
+    text-align: left;
+}
 .hero-subtitle{
     font-size: 32px;
     font-weight: 300;
@@ -114,7 +121,7 @@ li{
     
 }
 
-.profile-photo img{
+.profile-photo img {
     width: 100%;
     height: 100%;
     border-radius: 100px;
@@ -127,6 +134,11 @@ li{
     }
     .hero{
         background-position: top center;
+    }
+
+    .opinion-text{
+        height: 135px;
+        width: 370px;  
     }
 }
 
@@ -175,8 +187,37 @@ label,
         .profile-photo{
             margin: auto;
         }
+
+        .opinion-text{
+            width: 346px;  
+        }
+       
     }
 
     #burger-button:checked ~ ul{
        display: flex;
+}
+
+
+
+.container-opinion .profile-photo{
+    margin-right: 10px !important;
+    margin-left: 10px !important;
+    padding: 0;
+}
+
+.person-name{
+    font-family: Source Sans Pro;
+    font-size: 22px;
+    font-weight: 700;
+    text-align: left;
+    margin: 0;
+}
+
+.profesion{
+    font-family: Source Sans Pro;
+    font-size: 22px;
+    font-style: italic;
+    font-weight: 400;
+    text-align: left;
 }
