--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,9 @@ li{
         height: 135px;
         width: 370px;  
     }
+    #card3, #card4{
+        display: none !important;
+    }
 }
 
 label,
@@ -191,6 +194,10 @@ label,
         .opinion-text{
             width: 346px;  
         }
+
+        #card2{
+            display: none !important;
+        }
        
     }
 
@@ -221,3 +228,82 @@ label,
     font-weight: 400;
     text-align: left;
 }
+
+
+
+.video-section h2{
+
+    font-size: 32px;
+    font-weight: 300;
+}
+
+h2 .popular, .photo-name p, .info p{
+    color: #C271FF;
+}
+
+.video-card{
+    height: 150px;
+}
+
+.title-video{
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.text-video{
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.photo-name img{
+    width: 30px;
+    height: 30px;
+    border-radius: 100px;
+}
+
+.container-video{
+    width: 250px !important;
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+}
+
+.stars img{
+    width: 100%;
+    height: 100%;
+}
+
+.stars{
+    width: 15px;
+    height: 15px;
+}
+
+.info p{
+    line-height: 15px;
+}
+
+.play{
+    position: absolute;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 80px;
+}
+
+.arrow-left{
+    position: absolute;
+    width: 25px;
+    top:200px;
+    left:20px;
+}
+
+.arrow-right{
+    position: absolute;
+    top: 200px;
+    width: 25px;
+    right:20px;
+}
+
