--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ ul{
 .hero-courses{
     background-image: url('./images/pic_3.jpg');
     background-size: cover ;
-    background-position: -15px center;
+    background-position: top center;
     background-repeat: no-repeat;
     width: 100%;
     color: white;
@@ -507,4 +507,26 @@ h2 .popular, .photo-name p, .info p{
 }
 
 
+.search{
+    width: 50px;
+    height: 38px;
+}
 
+.search img{
+    width: 300%;
+    height: 100%;
+}
+
+::placeholder { 
+   color: white;
+}
+
+.form-section p{
+    font-size: 12px;
+    font-weight: 700;
+    text-align: left;
+}
+
+.form-section input , .form-control{
+    cursor: pointer;
+}
